[package]
name = "umd"
version = "0.1.0"
edition = "2021"

[dependencies]
humantime-serde = "1.1.1"
monoio = "0.2"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
bincode = "1.3.3"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3.10.1"

[lints.clippy]
complexity = "deny"
correctness = "deny"
nursery = "warn"
perf = "warn"
pedantic = "warn"
style = "warn"
suspicious = "warn"
